codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__manual_thread_name_status_surfaces.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: "format!(\"transcript:\\n{transcript}\\nfooter:\\n{footer}\\ntitle: {title}\")"
---
transcript:

footer:
› Ask Codex to do anything

  gpt-5.6-sol default · /tmp/project · review-fix
title: review-fix | project
