codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__misalignment_review_narrow.snap
---
source: tui/src/chatwidget/tests/misalignment_policy_tests.rs
assertion_line: 157
expression: "render_bottom_popup(&chat, 38)"
---
  Chat paused as a precaution

› 1. Acknowledge findings and
     continue
  2. Back
