codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__permission_discovery_empty.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Update Model Permissions
  No permission profiles returned by the server.

›    current-profile (current) (disabled)  Current permission profile. (disabled: Not available on
                                           this server.)

  Press enter to confirm or esc to go back
